--- a/ch11/Homepwner/Homepwner/Storyboard.storyboard
+++ b/ch11/Homepwner/Homepwner/Storyboard.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller - Big Nerd Ranch Store-->
+        <!--Items View Controller-->
         <scene sceneID="Cy2-z7-FgX">
             <objects>
                 <tableViewController id="0W4-sh-ovG" customClass="ItemsViewController" sceneMemberID="viewController">
@@ -12,44 +12,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="jFv-rf-bIE">
-                            <rect key="frame" x="0.0" y="64" width="320" height="50"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZDG-cR-LmO">
-                                    <rect key="frame" x="20" y="20" width="30" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="Edit">
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="0W4-sh-ovG" eventType="touchUpInside" id="Jjh-Yf-gOj"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HbE-p5-dbf">
-                                    <rect key="frame" x="269" y="20" width="31" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="New">
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="0W4-sh-ovG" eventType="touchUpInside" id="KXl-dT-LYx"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="ZDG-cR-LmO" firstAttribute="top" secondItem="jFv-rf-bIE" secondAttribute="top" constant="20" id="0F2-FP-Xbs"/>
-                                <constraint firstAttribute="bottom" secondItem="HbE-p5-dbf" secondAttribute="bottom" id="3qn-xR-2zv"/>
-                                <constraint firstItem="HbE-p5-dbf" firstAttribute="top" secondItem="jFv-rf-bIE" secondAttribute="top" constant="20" id="EZw-fY-Hn8"/>
-                                <constraint firstItem="ZDG-cR-LmO" firstAttribute="leading" secondItem="jFv-rf-bIE" secondAttribute="leading" constant="20" id="FAi-mq-A5w"/>
-                                <constraint firstAttribute="trailing" secondItem="HbE-p5-dbf" secondAttribute="trailing" constant="20" id="KBL-FE-Cwr"/>
-                                <constraint firstAttribute="bottom" secondItem="ZDG-cR-LmO" secondAttribute="bottom" id="jWu-uf-uNx"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" restorationIdentifier="BNRItemCell" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BNRItemCell" textLabel="Ajk-RK-exu" style="IBUITableViewCellStyleDefault" id="PqP-zi-1be">
-                                <rect key="frame" x="0.0" y="169" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PqP-zi-1be" id="Chl-Aw-W5t">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -74,7 +39,13 @@
                             <outlet property="delegate" destination="0W4-sh-ovG" id="ZVI-4J-eTQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Big Nerd Ranch Store" id="DbZ-mD-lJo"/>
+                    <navigationItem key="navigationItem" id="DbZ-mD-lJo">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2S5-FJ-2rX">
+                            <connections>
+                                <action selector="addNewItem:" destination="0W4-sh-ovG" id="R1E-A9-xtk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KPh-wP-uPk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -89,47 +60,56 @@
                         <viewControllerLayoutGuide type="bottom" id="CAr-8u-hIm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" horizontalHuggingPriority="252" horizontalCompressionResistancePriority="751" id="WGM-WK-q2H">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAE-8K-Qs6">
-                                <rect key="frame" x="20" y="33" width="46" height="21"/>
+                                <rect key="frame" x="20" y="13" width="46" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yo9-oe-XmV">
-                                <rect key="frame" x="74" y="28" width="226" height="30"/>
+                                <rect key="frame" x="74" y="8" width="226" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="wCr-PB-qzm" id="fpj-G4-ejm"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Serial" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCc-JH-Pdb">
-                                <rect key="frame" x="20" y="71" width="46" height="21"/>
+                                <rect key="frame" x="20" y="51" width="46" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Value" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="In0-WH-or3">
-                                <rect key="frame" x="20" y="108" width="46" height="21"/>
+                                <rect key="frame" x="20" y="88" width="46" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ztr-Wa-RwU">
-                                <rect key="frame" x="74" y="66" width="226" height="30"/>
+                                <rect key="frame" x="74" y="46" width="226" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="wCr-PB-qzm" id="x4A-em-5dH"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tL2-6i-lGQ">
-                                <rect key="frame" x="74" y="104" width="226" height="30"/>
+                                <rect key="frame" x="74" y="84" width="226" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="wCr-PB-qzm" id="mNv-5t-FVO"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creation Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9D-Gs-tYN">
-                                <rect key="frame" x="107" y="142" width="106" height="21"/>
+                                <rect key="frame" x="107" y="122" width="106" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -161,12 +141,13 @@
                             <constraint firstItem="g9D-Gs-tYN" firstAttribute="top" secondItem="tL2-6i-lGQ" secondAttribute="bottom" constant="8" id="w3b-5A-QE5"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="rMf-3r-eRr"/>
                     <connections>
                         <outlet property="creationDateLabel" destination="g9D-Gs-tYN" id="IZv-8R-Ial"/>
-                        <outlet property="nameTextField" destination="Yo9-oe-XmV" id="UZA-Ta-3zv"/>
-                        <outlet property="serialTextField" destination="Ztr-Wa-RwU" id="u3j-cT-lhy"/>
-                        <outlet property="valueTextField" destination="tL2-6i-lGQ" id="tRO-BA-VNv"/>
+                        <outlet property="nameField" destination="Yo9-oe-XmV" id="DeB-fA-tmm"/>
+                        <outlet property="serialNumberField" destination="Ztr-Wa-RwU" id="eDY-ww-2BN"/>
+                        <outlet property="valueField" destination="tL2-6i-lGQ" id="39v-gU-xxM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVt-Ui-sZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -181,7 +162,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="0W4-sh-ovG" kind="relationship" relationship="rootViewController" id="cYC-Lb-vAE"/>
+                        <segue destination="0W4-sh-ovG" kind="relationship" relationship="rootViewController" id="fk1-Wi-5io"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UJl-np-178" userLabel="First Responder" sceneMemberID="firstResponder"/>
